fix programme body and header spacing

--- a/styles/programme.css
+++ b/styles/programme.css
@@ -3,6 +3,12 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    margin: 0;
+    padding: 0;
+}
+
 #programme {
     background-color:#F1EADA ;
     display: flex;
@@ -11,7 +17,11 @@
     align-items: center;
     gap: 2rem;
     overflow-x: hidden;
-    margin-top: 7rem;
+    padding-top: 100px;
+    padding-bottom: 3rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    min-height: 100vh;
 }
 
 .page h2{
@@ -22,7 +32,7 @@
 }
 .line {
     background-color: white;
-    margin: 2rem;
+    margin: 0;
     display: flex;
     align-items: center;
     justify-content: center;
